Fix cart icon positioning on mobile devices

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -15,6 +15,11 @@ a {
   cursor: pointer;
 }
 
+ul li{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
+
 h3 {
   font-size: 30px;
   color: rgb(16, 18, 20);
@@ -61,6 +66,7 @@ h3 {
 
 .nav-icons {
   display: flex;
+  position: fixed;
   align-items: center;
   gap: 20px;
 }
@@ -96,6 +102,7 @@ h3 {
   transform: translateY(-20px);
   transition: opacity 0.2s ease-in-out, height 0s 0.5s, visibility 0s 0.5s, transform 0.5s ease-in-out;
   top: 60px;
+  background-color: rgb(255, 255, 255);
 }
 
 .search-container.visible {
@@ -157,30 +164,6 @@ input {
 }
 
 /* Media Queries */
-@media (max-width: 700px) {
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .navbar-expand .navbar-collapse.collapse {
-    display: block;
-  }
-
-  .navbar-expand .navbar-toggler {
-    display: block;
-  }
-}
-
-@media (min-width: 701px) and (max-width: 991px) {
-  .navbar-expand .navbar-collapse {
-    display: flex !important;
-  }
-
-  .navbar-expand .navbar-toggler {
-    display: none;
-  }
-}
 
 @media (min-width: 992px) {
   .navbar-expand .navbar-collapse {
@@ -192,17 +175,30 @@ input {
   }
 }
 
+
+@media (min-width: 701px) and (max-width: 991px) {
+  .navbar-expand .navbar-collapse {
+    display: flex !important;
+  }
+
+  .navbar-expand .navbar-toggler {
+    display: none;
+  }
+}
+
 @media (max-width: 767px) {
-  .navbar-brand {
+
+  .navbar-brand{
     order: 1;
   }
 
-  .navbar-toggler {
-    order: 0;
-  }
-
-  .nav-icons {
+  .nav-icons-mobile{
     order: 2;
+  }
+ 
+
+  .navbar-brand h3{
+   font-size: 20px;
   }
 
   .search-container {
@@ -218,10 +214,6 @@ input {
     top: 58px;
   }
 
-  .nav-icons {
-    display: none; /* Nascondi le icone nella navbar */
-  }
-
   .nav-icons-mobile {
     display: flex;
     margin-top: 10px;
@@ -231,10 +223,14 @@ input {
     width: 20px;
   }
 
+  .nav-icons-mobile{
+    position: relative;
+  }
+
   .cart-items {
     position: absolute;
-    top: 300px;
-    left: 62px;
+    top: 0px;
+    left: 50px;
     background-color: red;
     border-radius: 9px;
     font-size: 12px;
